--- a/TasteFoodIt/Views/Category/CreateCategory.cshtml
+++ b/TasteFoodIt/Views/Category/CreateCategory.cshtml
@@ -1,6 +1,4 @@
-﻿@model TasteFoodIt.Entities.Category
-
-@{
+﻿@{
     ViewBag.Title = "CreateCategory";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
@@ -20,36 +18,16 @@
             <!-- Form Basic -->
             <div class="card mb-4">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Form Basic</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Ekleme Paneli</h6>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form method="post">
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                                   placeholder="Enter email">
-                            <small id="emailHelp" class="form-text text-muted">
-                                We'll never share your
-                                email with anyone else.
-                            </small>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                        </div>
-                        <div class="form-group">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="customFile">
-                                <label class="custom-file-label" for="customFile">Choose file</label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-                                <label class="custom-control-label" for="customControlAutosizing">Remember me</label>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                            <label for="exampleInputCategory">Kategori Adı</label>
+                            <input type="text" class="form-control" name="CategoryName" id="exampleInputCategory" aria-describedby="emailHelp"
+                                   placeholder="Kategori Adını Giriniz">
+                        </div>                       
+                        <button type="submit" class="btn btn-primary">Kategoriyi Ekle</button>
                     </form>
                 </div>
             </div>
