--- a/TasteFoodIt/Views/Category/CategoryList.cshtml
+++ b/TasteFoodIt/Views/Category/CategoryList.cshtml
@@ -40,8 +40,8 @@
                                     <td>@item.CategoryId</td>
                                     <td>@item.CategoryName</td>
                                     <td><a href="#" class="btn btn-warning">Kategoriye Ait Ürünler</a></td>
-                                    <td><a href="#" class="btn btn-danger">Kategoriyi Sil</a></td>
-                                    <td><a href="#" class="btn btn-success">Güncelle</a></td>
+                                    <td><a href="/Category/DeleteCategory/@item.CategoryId" class="btn btn-danger">Kategoriyi Sil</a></td>
+                                    <td><a href="/Category/UpdateCategory/@item.CategoryId" class="btn btn-success">Güncelle</a></td>
                                 </tr>
                             }
                         </tbody>
