--- a/TasteFoodIt/Views/ErrorPage/Page404.cshtml
+++ b/TasteFoodIt/Views/ErrorPage/Page404.cshtml
@@ -18,7 +18,7 @@
     <div id="notfound">
         <div class="notfound">
             <div class="notfound-404">
-                <h1>Oooopps!</h1>
+                <h1>Ooopps!</h1>
                 <h2>404 - Sayfa Bulunamadı :(</h2>
             </div>
             <a href="/Category/CategoryList/">Ana Sayfaya Dön</a>
