--- a/TasteFoodIt/Views/Dashboard/Index.cshtml
+++ b/TasteFoodIt/Views/Dashboard/Index.cshtml
@@ -20,8 +20,8 @@
                 <div class="card-body">
                     <div class="row align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-uppercase mb-1">Earnings (Monthly)</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                            <div class="text-xs font-weight-bold text-uppercase mb-1">Kategori Sayısı</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.v1</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
                                 <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
                                 <span>Since last month</span>
@@ -40,8 +40,8 @@
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-uppercase mb-1">Sales</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">650</div>
+                            <div class="text-xs font-weight-bold text-uppercase mb-1">Ürün Sayısı</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.v2</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
                                 <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
                                 <span>Since last years</span>
@@ -60,8 +60,8 @@
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-uppercase mb-1">New User</div>
-                            <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">366</div>
+                            <div class="text-xs font-weight-bold text-uppercase mb-1">Şef Sayısı</div>
+                            <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">@ViewBag.v3</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
                                 <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 20.4%</span>
                                 <span>Since last month</span>
@@ -80,8 +80,8 @@
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-uppercase mb-1">Pending Requests</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                            <div class="text-xs font-weight-bold text-uppercase mb-1">Aktif Rezervasyonlar</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.v4</div>
                             <div class="mt-2 mb-0 text-muted text-xs">
                                 <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
                                 <span>Since yesterday</span>
