--- a/TasteFoodIt/Views/AdminLayout/PartialSidebar.cshtml
+++ b/TasteFoodIt/Views/AdminLayout/PartialSidebar.cshtml
@@ -24,4 +24,10 @@
             <span>Ürünler</span>
         </a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/Notification/NotificationList/">
+            <i class="fas fa-fw fa-moon"></i>
+            <span>Bildirimler</span>
+        </a>
+    </li>
 </ul>
